--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,9 @@
             <a href="#" class="forgot-password">Quên mật khẩu?</a>
             <button type="submit" class="login-btn">Đăng nhập</button>
         </form>
+        <div class="register-option">
+            <p>Chưa có tài khoản? <a href="{{ url_for('register') }}" class="register-link">Đăng ký ngay</a></p>
+        </div>
     </div>
 </body>
 </html>
